# VoronoiX

./: CMakeLists.txt  README.md  main.cpp
include/vx/: core.hpp  solver.hpp
include/vx/math/: vec.hpp
include/vx/model/: graph.hpp  polygon.hpp
src/: core_extended.cpp  core_extended.hpp  core_impl.cpp  core_impl.hpp  solver.cpp  voronoi.cpp  voronoi.hpp
src/dcel/: edge.cpp  edge.hpp  face.cpp  face.hpp  vertex.cpp  vertex.hpp
src/math/: vec.cpp
src/model/: graph.cpp  polygon.cpp
